--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-messages": "~1.3.17",
     "owasp-password-strength-test": "~1.3.0",
     "chico": "mercadolibre/chico#~1.2.2",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "normalize-css": "normalize.css#~3.0.3"
   },
   "resolutions": {
     "angular": "~1.3"
